@@ -5,6 +5,9 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+September 27, 2011
+* [mickael] WIP: fix some warnings from j2k_dump and index.c
+
 September 22, 2011
 * [mickael] WIP: fix build compilation (with autotools) with MJ2 option (credit to Winfried) 
 * [mickael] WIP: fix build compilation error with windows platform about event_mgr management. 
